--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/rubik": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.0",
+    "@types/react-native": "^0.73.0",
     "expo": "~52.0.18",
-    "expo-font": "~13.0.1",
+    "expo-font": "^13.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "4.0.11",
     "expo-splash-screen": "~0.29.18",
@@ -33,7 +35,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "^19.0.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "react-test-renderer": "18.3.1",
